--- a/index.html
+++ b/index.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>df6</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/CSS/style.css">
 </head>
+
 <body>
-    
+    <img src="https://sebabascur.github.io/img/sin-tiitulo-3_mesa-de-trabajo-1blanco-mP4Xr0XB96SGeOD8.png" alt="no disponible" width="250px">
+    <div class="caja-main container d-flex justify-content-center align-items-center" style="height: 100vh;">
+        <div class="caja border p-5 border-primary-subtle">
+            <h1 class="pb-4">Conversor de Monedas Nacionales</h1>
+            <input id="input-value" type="number" class="form-control mb-3" placeholder="Ingrese $ en CLP">
+            <h2>Moneda a convertir</h2>
+            <select id="tipo-moneda" class="form-select mb-3">
+                <option value="uf">UF</option>
+                <option value="dolar">Dolar</option>
+                <option value="euro">Euro</option>
+                <option value="utm">UTM</option>
+                <option value="bitcoin">Bitcoin</option>
+            </select>
+            <div class="d-grid gap-2">
+                <button id="btn-convertir" class="btn btn-primary" type="button">Convertir</button>
+            </div>
+            <hr>
+            <h3 id="result-value">...</h3>
+        </div>
+        <div id="chart-container" class="chart"></div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/2.25.0/date-fns.min.js"></script>
+    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/chart.js"></script>
 </body>
+
 </html>
